leaderboard/gameover interaction
